--- a/templates/authentification.ejs
+++ b/templates/authentification.ejs
@@ -1,11 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/authentification.css" />
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+  <title><%= title %></title>
 </head>
+
 <body>
-    
+  <div class="container">
+    <div class="row d-flex justify-content-center">
+      <div class="col-4 d-flex justify-content-center">
+        <h1 class="m-5"><%= title %></h1>
+      </div>
+    </div>
+    <div class="row d-flex justify-content-center">
+      <div class="col-4 d-flex justify-content-center">
+        <% if(form === "inscription") { %>
+        <form method="post" class="row">
+          <div class="mb-3">
+            <label for="lastnameI" class="form-label">Nom</label>
+            <input type="text" class="form-control" id="lastnameI" name="lastnameI" />
+          </div>
+          <div class="mb-3">
+            <label for="firstnameI" class="form-label">Prénom</label>
+            <input type="text" class="form-control" id="firstnameI" name="firstnameI" />
+          </div>
+          <div class="mb-3">
+            <label for="emailI" class="form-label">Email</label>
+            <input type="email" class="form-control" id="emailI" name="emailI" />
+          </div>
+          <div class="mb-3">
+            <label for="passwordI" class="form-label">Mot de passe</label>
+            <input type="password" class="form-control" id="passwordI" name="passwordI" />
+            <div id="emailHelp" class="form-text">Doit contenir une majuscule, un chiffre, un caractère spécial et faire minimum dix caractères de long</div>
+          </div>
+          <div class="text-center mt-3">
+            <button type="submit" class="btn btn-primary w-50">Inscription</button>
+          </div>
+        </form>
+        <% } %>
+        <% if(form === "login") { %>
+        <form method="post" class="row">
+          <div class="mb-3">
+            <label for="emailC" class="form-label">Email</label>
+            <input type="email" class="form-control" id="emailC" name="emailC" />
+          </div>
+          <div class="mb-3">
+            <label for="passwordC" class="form-label">Mot de passe</label>
+            <input type="password" class="form-control" id="passwordC" name="passwordC" />
+          </div>
+          <div class="text-center mt-3">
+            <button type="submit" class="btn btn-primary w-50">Connexion</button>
+          </div>
+        </form>
+        <% } %>
+      </div>
+    </div>
+    <% if(errors !== []){ %>
+    <ul class="list-group">
+      <% errors.forEach(error => { %>
+        <li class="list-group-item"><%= error %></li>
+      <% }); %>
+      <% } %>
+    </ul>
+  </div>
 </body>
+
 </html>
