--- a/templates/authentification.ejs
+++ b/templates/authentification.ejs
@@ -60,7 +60,7 @@
         <% } %>
       </div>
     </div>
-    <% if(errors !== []){ %>
+    <% if(errors !== [] && errors.length > 0){ %>
     <div class="row mt-3 d-flex justify-content-center ms-4">
       <ul class="list-group list-group-flush col-5">
         <% errors.forEach(error => { %>
