--- a/templates/administration.ejs
+++ b/templates/administration.ejs
@@ -5,9 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Administration</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/administration.css" />
-  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"></script>
   <script defer src="https://kit.fontawesome.com/44e9c18f39.js" crossorigin="anonymous"></script>
 </head>
 
@@ -20,103 +23,130 @@
     <div class="row mt-5">
       <h3 class="col-5 text-decoration-underline">Gestion des films</h3>
     </div>
-    <% if(films.list.length > 0) { %>
-    <div class="row mt-5">
-      <% films.list.forEach(film => { %>
-      <div class="card col-2 ms-3" >
-        <img src="<%= film.poster %>" class="card-img-top" alt="une belle affiche">
-        <div class="card-body">
-          <h5 class="card-title"><%= film.title %></h5>
-          <p class="card-text">Sorti au cinéma le <%= film.releaseDate %></p>
-          <p class="card-text"><%= film.description %></p>
-          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-        </div>
+    <% if(films.list.length> 0) { %>
+      <div class="row mt-5">
+        <% films.list.forEach(film=> { %>
+          <div class="card col-3 ms-3">
+            <img src="<%= film.poster %>" class="card-img-top" alt="une belle affiche">
+            <div class="card-body">
+              <h5 class="card-title">
+                <%= film.title %>
+              </h5>
+              <p class="card-text">Sorti au cinéma le <%= film.releaseDate %>
+              </p>
+              <p class="card-text">
+                <%= film.description %>
+              </p>
+              <div class="d-flex justify-content-end">
+                <button href="#" class="btn btn-primary me-2">Modifier</button>
+                <button onclick="window.location.href='/administration/films/<%= film.id %>'" class="btn btn-danger">Supprimer</button>
+              </div>
+            </div>
+          </div>
+          <% }) %>
       </div>
-      <% }) %>
-    </div>
-    <% } %>
-    <div class="row mt-3">
-      <form method="post" action="/administration/films" class="row col-6">
-        <div class="mb-3 col-8">
-          <label for="title" class="form-label">Titre</label>
-          <input type="text" class="form-control" id="title" name="title" />
-        </div>
-        <div class="mb-3 col-8">
-          <label for="genres" class="form-label">Genre(s)</label>
-          <select class="form-select" id="genres" name="genres[]" multiple>
-            <% genres.list.forEach(genre => { %>
-            <option value="<%= genre.id %>"><%= genre.name %></option>
-            <% }) %>
-          </select>
-        </div>
-        <div class="mb-3 col-8">
-          <label for="poster" class="form-label">Affiche</label>
-          <input type="text" class="form-control" id="poster" name="poster" />
-          <div id="posterHelp" class="form-text">Entrez une url finissant par un format d'image valide (jpg, jpeg...)</div>
-        </div>
-        <div class="mb-3 col-8">
-          <label for="releaseDate" class="form-label">Date de sortie au cinéma</label>
-          <input type="date" class="form-control" id="releaseDate" name="releaseDate" />
-        </div>
-        <div class="mb-3 col-8">
-          <label for="description" class="form-label">Pitch du film</label>
-          <textarea type="text" class="form-control" id="description" name="description" rows="3"></textarea>
-        </div>
-        <div>
-          <button type="submit" class="btn btn-primary w-50">Ajouter un film</button>
-        </div>
-      </form>
-    </div>
-    <!-- Section gestion des genres de film -->
-    <div class="row mt-5">
-      <h3 class="col-5 text-decoration-underline">Gestion des Genres de film</h3>
-    </div>
-    <div class="row mt-3">
-      <% if(genres.list && genres.list.length > 0) { %>
-      <ul id="liste-genre" class="list-group list-group-flush col-4">
-        <% genres.list.forEach(genre => { %>
-        <li class="list-group-item list-group-item-action d-flex justify-content-between">
-          <span><%= genre.name %></span>
-          <div class="unactivated">
-            <i class="fa-solid fa-arrow-left"></i>
-          </div>
-          <div class="d-none action">
-            <button class="btn btn-alert btn-sm" onclick="window.location.href='/administration/genres/<%= genre.id %>'">Supprimer</button>
-            <button class="btn btn-alert btn-sm" onclick="window.location.href='/administration/genres/modify/<%= genre.id %>'">Modifier</button>
-          </div>
-        </li>
-        <% }); %>
-      </ul>
       <% } %>
-    </div>
-    <div class="row mt-3">
-      <% if(genres.displayModifyGenreForm) { %>
-      <form method="post" action="/administration/genres/<%= genres.genreToModify.id %>" class="row col-4">
-        <input type="hidden" class="form-control" id="id" name="id" value="<%= genres.genreToModify.id %>" />
-        <div class="mb-3 col-8">
-          <input type="text" class="form-control" id="nameM" name="nameM" value="<%= genres.genreToModify.name %>" />
+        <div class="row mt-3">
+          <form method="post" action="/administration/films" class="row col-6">
+            <div class="mb-3 col-8">
+              <label for="title" class="form-label">Titre</label>
+              <input type="text" class="form-control" id="title" name="title" />
+            </div>
+            <div class="mb-3 col-8">
+              <label for="genres" class="form-label">Genre(s)</label>
+              <select class="form-select" id="genres" name="genres[]" multiple>
+                <% genres.list.forEach(genre=> { %>
+                  <option value="<%= genre.id %>">
+                    <%= genre.name %>
+                  </option>
+                  <% }) %>
+              </select>
+            </div>
+            <div class="mb-3 col-8">
+              <label for="poster" class="form-label">Affiche</label>
+              <input type="text" class="form-control" id="poster" name="poster" />
+              <div id="posterHelp" class="form-text">Entrez une url finissant par un format d'image valide (jpg,
+                jpeg...)</div>
+            </div>
+            <div class="mb-3 col-8">
+              <label for="releaseDate" class="form-label">Date de sortie au cinéma</label>
+              <input type="date" class="form-control" id="releaseDate" name="releaseDate" />
+            </div>
+            <div class="mb-3 col-8">
+              <label for="description" class="form-label">Pitch du film</label>
+              <textarea type="text" class="form-control" id="description" name="description" rows="3"></textarea>
+            </div>
+            <div>
+              <button type="submit" class="btn btn-primary w-50">Ajouter un film</button>
+            </div>
+          </form>
         </div>
-        <div class="col-12 row ">
-          <button type="submit" class="btn btn-primary col-5 ms-3" onclick="window.location.href='/administration/genre/:id'">Modifier le genre</button>
-          <button class="btn btn-danger col-5 ms-3" onclick="window.location.href='/administration'">Annuler</button>
-        </div>
-      </form>
-      <% } else { %>
-      <form method="post" action="/administration/genres" class="row col-4">
-        <div class="mb-3 col-8">
-          <input type="text" class="form-control" id="name" name="name" />
-        </div>
-        <div>
-          <button type="submit" class="btn btn-primary w-50">Ajouter un genre</button>
-        </div>
-      </form>
-      <% } %>
-    </div>
-    <% if(error.genreError !== null && error.genreError !== "") { %>
-    <div class="row mt-3">
-      <p><%= error.genreError.message %></p>
-    </div>
-    <% } %>
+        <% if(error.filmError) { %>
+          <div class="row mt-3">
+            <p>
+              <%= error.filmError %>
+            </p>
+          </div>
+          <% } %>
+            <!-- Section gestion des genres de film -->
+            <div class="row mt-5">
+              <h3 class="col-5 text-decoration-underline">Gestion des Genres de film</h3>
+            </div>
+            <div class="row mt-3">
+              <% if(genres.list && genres.list.length> 0) { %>
+                <ul id="liste-genre" class="list-group list-group-flush col-4">
+                  <% genres.list.forEach(genre=> { %>
+                    <li class="list-group-item list-group-item-action d-flex justify-content-between">
+                      <span>
+                        <%= genre.name %>
+                      </span>
+                      <div class="unactivated">
+                        <i class="fa-solid fa-arrow-left"></i>
+                      </div>
+                      <div class="d-none action">
+                        <button class="btn btn-alert btn-sm"
+                          onclick="window.location.href='/administration/genres/<%= genre.id %>'">Supprimer</button>
+                        <button class="btn btn-alert btn-sm"
+                          onclick="window.location.href='/administration/genres/modify/<%= genre.id %>'">Modifier</button>
+                      </div>
+                    </li>
+                    <% }); %>
+                </ul>
+                <% } %>
+            </div>
+            <div class="row mt-3">
+              <% if(genres.displayModifyGenreForm) { %>
+                <form method="post" action="/administration/genres/<%= genres.genreToModify.id %>" class="row col-4">
+                  <input type="hidden" class="form-control" id="id" name="id" value="<%= genres.genreToModify.id %>" />
+                  <div class="mb-3 col-8">
+                    <input type="text" class="form-control" id="nameM" name="nameM"
+                      value="<%= genres.genreToModify.name %>" />
+                  </div>
+                  <div class="col-12 row ">
+                    <button type="submit" class="btn btn-primary col-5 ms-3"
+                      onclick="window.location.href='/administration/genre/:id'">Modifier le genre</button>
+                    <button class="btn btn-danger col-5 ms-3"
+                      onclick="window.location.href='/administration'">Annuler</button>
+                  </div>
+                </form>
+                <% } else { %>
+                  <form method="post" action="/administration/genres" class="row col-4">
+                    <div class="mb-3 col-8">
+                      <input type="text" class="form-control" id="name" name="name" />
+                    </div>
+                    <div>
+                      <button type="submit" class="btn btn-primary w-50">Ajouter un genre</button>
+                    </div>
+                  </form>
+                  <% } %>
+            </div>
+            <% if(error.genreError) { %>
+              <div class="row mt-3">
+                <p>
+                  <%= error.genreError %>
+                </p>
+              </div>
+              <% } %>
   </div>
 </body>
 
