--- a/templates/administration.ejs
+++ b/templates/administration.ejs
@@ -88,9 +88,7 @@
               </div>
               <div class="mb-3 col-8">
                 <label for="descriptionM" class="form-label">Pitch du film</label>
-                <textarea type="text" class="form-control" id="descriptionM" name="descriptionM" rows="3">
-                  <%= films.filmToModify.description %>
-                </textarea>
+                <textarea type="text" class="form-control" id="descriptionM" name="descriptionM" rows="3"><%= films.filmToModify.description %></textarea>
               </div>
               <div class="col-12 row ">
                 <button type="submit" class="btn btn-primary col-5 ms-3"
