--- a/templates/homepage.ejs
+++ b/templates/homepage.ejs
@@ -7,7 +7,7 @@
     <title>Accueil</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/administration.css" />
+    <link rel="stylesheet" href="../css/homepage.css" />
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
@@ -20,6 +20,19 @@
         <div class="row mt-5 d-flex justify-content-center">
             <h1 class="col-1">Accueil</h1>
         </div>
+        <div>
+            <form method="post" action="/homepage" class="row" >
+                <div class="col-4 mb-3">
+                    <label for="title" class="form-label ms-2">Recherchez par titre</label>
+                    <input type="text" class="form-control" id="title" name="title"
+                        placeholder="Écrivez ici le titre de votre choix" />
+                </div>
+                <div class="col-1 mt-3">
+                    <button type="submit" class="btn btn-primary mt-3"><i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+            </form>
+        </div>
+        <% if(films.length > 0) { %>
         <div class="row mt-5">
             <% films.forEach(film=> { %>
                 <div class="card col-3 mt-1">
@@ -41,16 +54,22 @@
                                 </p>
                                 <div class="d-flex justify-content-end">
                                     <% if(isAdmin) { %>
-                                    <button onclick="window.location.href='/administration/films/modify/<%= film.id %>'"
-                                        class="btn btn-primary me-2">Modifier</button>
-                                    <% } else { %>
-                                        <i class="fa-regular fa-star"></i>
-                                    <% } %>
+                                        <button
+                                            onclick="window.location.href='/administration/films/modify/<%= film.id %>'"
+                                            class="btn btn-primary me-2">Modifier</button>
+                                        <% } else { %>
+                                            <% if(true) { %>
+                                                <i class="fa-regular fa-star"></i>
+                                                <% } else { %>
+                                                    <i class="fa-solid fa-star yellowstar"></i>
+                                                    <% } %>
+                                                        <% } %>
                                 </div>
                     </div>
                 </div>
                 <% }) %>
         </div>
+        <% } %>
         <% if(error) { %>
             <div class="row mt-5">
                 <p>
