--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -1,3 +1,26 @@
 .yellowstar {
     color: gold;
 }
+
+.resume-text {
+  --lines: 3;
+  display: -webkit-box !important;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: var(--lines);
+  line-clamp: var(--lines);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  line-height: 1.2em;
+  max-height: calc(1.2em * var(--lines));
+}
+
+.resume-text.full-text {
+  -webkit-line-clamp: unset;
+  line-clamp: unset;
+  max-height: none;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
