--- a/templates/homepage.ejs
+++ b/templates/homepage.ejs
@@ -21,7 +21,7 @@
             <h1 class="col-1">Accueil</h1>
         </div>
         <div>
-            <form method="post" action="/homepage" class="row" >
+            <form method="post" action="/homepage" class="row">
                 <div class="col-4 mb-3">
                     <label for="title" class="form-label ms-2">Recherchez par titre</label>
                     <input type="text" class="form-control" id="title" name="title"
@@ -32,51 +32,53 @@
                 </div>
             </form>
         </div>
-        <% if(films.length > 0) { %>
-        <div class="row mt-5">
-            <% films.forEach(film=> { %>
-                <div class="card col-3 mt-1">
-                    <img src="<%= film.poster %>" class="card-img-top" alt="une belle affiche">
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            <%= film.title %>
-                        </h5>
-                        <% film.genres.forEach(genre=> { %>
-                            <span class="badge text-bg-primary mb-2">
-                                <%= genre %>
-                            </span>
-                            <% }); %>
-                                <p class="card-text">Sorti au cinéma le <%= film.releaseDate %>
-                                </p>
-                                <p id="description-film-<%= film.id %>"
-                                    class="card-text resume-text mb-3 cursor-pointer">
-                                    <%= film.description %>
-                                </p>
-                                <div class="d-flex justify-content-end">
-                                    <% if(isAdmin) { %>
-                                        <button
-                                            onclick="window.location.href='/administration/films/modify/<%= film.id %>'"
-                                            class="btn btn-primary me-2">Modifier</button>
-                                        <% } else { %>
-                                            <% if(true) { %>
-                                                <i class="fa-regular fa-star"></i>
-                                                <% } else { %>
-                                                    <i class="fa-solid fa-star yellowstar"></i>
-                                                    <% } %>
-                                                        <% } %>
-                                </div>
-                    </div>
-                </div>
-                <% }) %>
-        </div>
-        <% } %>
-        <% if(error) { %>
+        <% if(films.length> 0) { %>
             <div class="row mt-5">
-                <p>
-                    <%= error %>
-                </p>
+                <% films.forEach(film=> { %>
+                    <div class="card col-3 mt-1">
+                        <img src="<%= film.poster %>" class="card-img-top" alt="une belle affiche">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <%= film.title %>
+                            </h5>
+                            <% film.genres.forEach(genre=> { %>
+                                <span class="badge text-bg-primary mb-2">
+                                    <%= genre %>
+                                </span>
+                                <% }); %>
+                                    <p class="card-text">Sorti au cinéma le <%= film.releaseDate %>
+                                    </p>
+                                    <p id="description-film-<%= film.id %>"
+                                        class="card-text resume-text mb-3 cursor-pointer">
+                                        <%= film.description %>
+                                    </p>
+                                    <div class="d-flex justify-content-end">
+                                        <% if(isAdmin) { %>
+                                            <button
+                                                onclick="window.location.href='/administration/films/modify/<%= film.id %>'"
+                                                class="btn btn-primary me-2">Modifier</button>
+                                            <% } else { %>
+                                                <% if((films.favori !==[null] && user.favoris.some(favori=> favori.id
+                                                    === film.id))) { %>
+                                                    <i class="fa-solid fa-star yellowstar"></i>
+                                                    <% } else { %>
+                                                        <i class="fa-regular fa-star cursor-pointer"
+                                                            onclick="window.location.href='/homepage/favori/<%= film.id %>'"></i>
+                                                        <% } %>
+                                                            <% } %>
+                                    </div>
+                        </div>
+                    </div>
+                    <% }) %>
             </div>
             <% } %>
+                <% if(error) { %>
+                    <div class="row mt-5">
+                        <p>
+                            <%= error %>
+                        </p>
+                    </div>
+                    <% } %>
     </div>
 </body>
 
