--- a/templates/favoris.ejs
+++ b/templates/favoris.ejs
@@ -17,9 +17,12 @@
 
 <body>
     <div class="container">
+        <div class="row d-flex justify-content-center mt-5">
+            <h1 class="col-3">Liste de Favoris</h1>
+        </div>
         <%- include('partials/suppress-modal') %>
             <% if(films.length> 0) { %>
-                <div class="row mt-5">
+                <div class="row mt-5  d-flex justify-content-center">
                     <% films.forEach(film=> { %>
                         <div class="card col-3 mt-1">
                             <img src="<%= film.poster %>" class="card-img-top" alt="une belle affiche">
