--- a/templates/profile.ejs
+++ b/templates/profile.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,11 +13,52 @@
         crossorigin="anonymous"></script>
     <script defer src="https://kit.fontawesome.com/44e9c18f39.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="container">
         <div class="row d-flex justify-content-center">
             <h1 class="col-3">Gestion du profil</h1>
         </div>
+        <div class="row">
+            <h3 class="mt-5 mb-4 text-decoration-underline">Modifier son compte</h3>
+            <form method="post" action="/profile/<%= user.id %>" class="col-4">
+                <input type="hidden" id="id" name="id" value="<%= user.id %>">
+                <div class="mb-3">
+                    <label for="lastname" class="form-label">Nom</label>
+                    <input type="text" class="form-control" id="lastname" name="lastname" value="<%= user.lastname %>" />
+                </div>
+                <div class="mb-3">
+                    <label for="firstname" class="form-label">Prénom</label>
+                    <input type="text" class="form-control" id="firstname" name="firstname" value="<%= user.firstname %>" />
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" name="email" value="<%= user.email %>" />
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Mot de passe actuel</label>
+                    <input type="password" class="form-control" id="password" name="password" />
+                    <div id="emailHelp" class="form-text">Obligatoire pour valider la modification de compte</div>
+                </div>
+                <div class="mb-3">
+                    <label for="newPassword" class="form-label">Nouveau mot de passe (facultatif)</label>
+                    <input type="password" class="form-control" id="newPassword" name="newPassword" />
+                    <div id="emailHelp" class="form-text">Doit contenir une majuscule, un chiffre, un caractère spécial
+                        et faire minimum dix caractères de long</div>
+                </div>
+                <div class="mb-3">
+                    <label for="confirmPassword" class="form-label">Confirmer nouveau mot de passe</label>
+                    <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" />
+                    <div id="emailHelp" class="form-text">Doit être identique au nouveau mot de passe</div>
+                </div>
+                <div class="text-center mt-3 row d-flex justify-content-center">
+                    <button class="btn btn-danger col-5 me-3" onclick="window.location.href='/profile'">Effacer
+                        modification</button>
+                    <button type="submit" class="btn btn-primary col-5">Modifier</button>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
+
 </html>
