--- a/templates/administration.ejs
+++ b/templates/administration.ejs
@@ -17,6 +17,7 @@
 
 <body>
   <div class="container">
+    <%- include('partials/navbar') %>
     <div class="row d-flex justify-content-center mt-5">
       <h1 class="col-5">Console Administrateur</h1>
     </div>
