--- a/templates/homepage.ejs
+++ b/templates/homepage.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
+    <link rel="icon" href="../../img/logo-site.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/homepage.css" />
@@ -17,6 +18,7 @@
 
 <body>
     <div class="container">
+        <%- include('partials/navbar') %>
         <div class="row mt-5 d-flex justify-content-center">
             <h1 class="col-1">Accueil</h1>
         </div>
