--- a/templates/profile.ejs
+++ b/templates/profile.ejs
@@ -16,6 +16,7 @@
 
 <body>
     <div class="container">
+        <%- include('partials/navbar') %>
         <div class="row d-flex justify-content-center">
             <h1 class="col-3">Gestion du profil</h1>
         </div>
