--- a/templates/homepage.ejs
+++ b/templates/homepage.ejs
@@ -2,80 +2,41 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil</title>
-    <%- include('partials/header') %>
-    <link rel="stylesheet" href="../css/homepage.css" />
-    <script defer src="../js/expand-film-resume.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Accueil</title>
+  <%- include('partials/header') %>
+  <link rel="stylesheet" href="../css/homepage.css" />
 </head>
 
 <body>
-    <div class="container">
-        <%- include('partials/navbar') %>
-        <div class="row mt-5 d-flex justify-content-center">
-            <h1 class="col-1">Accueil</h1>
-        </div>
-        <div>
-            <form method="post" action="/homepage" class="row">
-                <div class="col-4 mb-3">
-                    <label for="title" class="form-label ms-2">Recherchez par titre</label>
-                    <input type="text" class="form-control" id="title" name="title"
-                        placeholder="Écrivez ici le titre de votre choix" />
-                </div>
-                <div class="col-1 mt-3">
-                    <button type="submit" class="btn btn-primary mt-3"><i class="fa-solid fa-arrow-right"></i></button>
-                </div>
-            </form>
-        </div>
-        <% if(films.length> 0) { %>
-            <%- include('partials/full-poster-modal') %>
-            <div class="row mt-5">
-                <% films.forEach(film=> { %>
-                    <div class="card col-3 mt-1">
-                            <img src="<%= film.poster %>" class="card-img-top" alt="une belle affiche" />
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <%= film.title %>
-                            </h5>
-                            <% film.genres.forEach(genre=> { %>
-                                <span class="badge bg-primary text-bg-primary mb-2">
-                                    <%= genre %>
-                                </span>
-                                <% }); %>
-                                    <p class="card-text">Sorti au cinéma le <%= film.releaseDate %>
-                                    </p>
-                                    <p id="description-film-<%= film.id %>"
-                                        class="card-text resume-text mb-3 cursor-pointer">
-                                        <%= film.description %>
-                                    </p>
-                                    <div class="d-flex justify-content-end">
-                                        <% if(isAdmin) { %>
-                                            <button
-                                                onclick="window.location.href='/administration/films/modify/<%= film.id %>'"
-                                                class="btn btn-primary me-2">Modifier</button>
-                                            <% } else { %>
-                                                <% if((user.favoris.filter(f => f !== null).length > 0 && user.favoris.some(favori => favori.id === film.id))) { %>
-                                                    <i class="fa-solid fa-star yellowstar"></i>
-                                                    <% } else { %>
-                                                        <i class="fa-regular fa-star cursor-pointer"
-                                                            onclick="window.location.href='/homepage/favori/<%= film.id %>'"></i>
-                                                        <% } %>
-                                                            <% } %>
-                                    </div>
-                        </div>
-                    </div>
-                    <% }) %>
-            </div>
-            <% } %>
-                <% if(error) { %>
-                    <div class="row mt-5">
-                        <p>
-                            <%= error %>
-                        </p>
-                    </div>
-                    <% } %>
+  <div class="container">
+    <%- include('partials/navbar') %>
+    <div class="row mt-5 d-flex justify-content-center">
+      <h1 class="col-1">Accueil</h1>
     </div>
+    <div>
+      <form method="post" action="/homepage" class="row">
+        <div class="col-4 mb-3">
+          <label for="title" class="form-label ms-2">Recherchez par titre</label>
+          <input type="text" class="form-control" id="title" name="title" placeholder="Écrivez ici le titre de votre choix" />
+        </div>
+        <div class="col-1 mt-3">
+          <button type="submit" class="btn btn-primary mt-3"><i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+      </form>
+    </div>
+    <% if(films.length> 0) { %>
+    <%- include('partials/film-card') %>
+    <% } %>
+    <% if(error) { %>
+    <div class="row mt-5">
+      <p>
+        <%= error %>
+      </p>
+    </div>
+    <% } %>
+  </div>
 </body>
 
 </html>
