--- a/templates/homepage.ejs
+++ b/templates/homepage.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accueil</title>
+  <title><%= FRONTEND.TITLE_PAGE %></title>
   <%- include('partials/header') %>
   <link rel="stylesheet" href="../css/homepage.css" />
 </head>
@@ -13,13 +13,13 @@
   <div class="container">
     <%- include('partials/navbar') %>
     <div class="row mt-5 d-flex justify-content-center">
-      <h1 class="col-1">Accueil</h1>
+      <h1 class="col-1"><%= FRONTEND.TITLE_PAGE %></h1>
     </div>
     <div>
-      <form method="post" action="/homepage" class="row">
+      <form method="post" action="<%= `/${VIEW_LIBELLE.HOMEPAGE}` %>" class="row">
         <div class="col-4 mb-3">
-          <label for="title" class="form-label ms-2">Recherchez par titre</label>
-          <input type="text" class="form-control" id="title" name="title" placeholder="Écrivez ici le titre de votre choix" />
+          <label for="title" class="form-label ms-2"><%= FRONTEND.TITLE_SEARCH_LIBELLE %></label>
+          <input type="text" class="form-control" id="title" name="title" placeholder="<%= FRONTEND.TITLE_SEARCH_PLACEHOLDER %>" />
         </div>
         <div class="col-1 mt-3">
           <button type="submit" class="btn btn-primary mt-3"><i class="fa-solid fa-arrow-right"></i></button>
