--- a/templates/administration.ejs
+++ b/templates/administration.ejs
@@ -103,7 +103,7 @@
     <% } %>
     <!-- Section gestion des genres de film -->
     <div class="row mt-5">
-      <h3 class="col-5 text-decoration-underline">Gestion des Genres de film</h3>
+      <h3 class="col-5 text-decoration-underline"><%= FRONTEND.GENRE_FORM_LIBELLE.FORM_TITLE %></h3>
     </div>
     <div class="row mt-3">
       <% if(genres.list && genres.list.length> 0) { %>
@@ -117,8 +117,8 @@
             <i class="fa-solid fa-arrow-left"></i>
           </div>
           <div class="d-none action">
-            <button class="btn btn-alert btn-sm" onclick="window.location.href='/administration/genres/<%= genre.id %>'">Supprimer</button>
-            <button class="btn btn-alert btn-sm" onclick="window.location.href='/administration/genres/modify/<%= genre.id %>'">Modifier</button>
+            <button class="btn btn-alert btn-sm" onclick="window.location.href='/administration/genres/<%= genre.id %>'"><%= FRONTEND.GENRE_FORM_LIBELLE.DELETE_BUTTON_LIBELLE %></button>
+            <button class="btn btn-alert btn-sm" onclick="window.location.href='/administration/genres/modify/<%= genre.id %>'"><%= FRONTEND.GENRE_FORM_LIBELLE.UPDATE_BUTTON_LIBELLE %></button>
           </div>
         </li>
         <% }); %>
@@ -133,8 +133,8 @@
           <input type="text" class="form-control" id="nameM" name="nameM" value="<%= genres.genreToModify.name %>" />
         </div>
         <div class="col-12 row ">
-          <button type="submit" class="btn btn-primary col-5 ms-3" onclick="window.location.href='/administration/genres/:id'">Modifier le genre</button>
-          <button class="btn btn-danger col-5 ms-3" onclick="window.location.href='/administration'">Annuler</button>
+          <button type="submit" class="btn btn-primary col-5 ms-3" onclick="window.location.href='/administration/genres/:id'"><%= FRONTEND.GENRE_FORM_LIBELLE.UPDATE_ACTION_LIBELLE %></button>
+          <button class="btn btn-danger col-5 ms-3" onclick="window.location.href='/administration'"><%= FRONTEND.FILM_FORM_LIBELLE.CANCEL_BUTTON %></button>
         </div>
       </form>
       <% } else { %>
@@ -143,7 +143,7 @@
           <input type="text" class="form-control" id="name" name="name" />
         </div>
         <div>
-          <button type="submit" class="btn btn-primary w-50">Ajouter un genre</button>
+          <button type="submit" class="btn btn-primary w-50"><%= FRONTEND.GENRE_FORM_LIBELLE.ADD_BUTTON_LIBELLE %></button>
         </div>
       </form>
       <% } %>
