--- a/templates/favoris.ejs
+++ b/templates/favoris.ejs
@@ -13,7 +13,7 @@
   <div class="container">
     <%- include('partials/navbar') %>
     <div class="row d-flex justify-content-center mt-5">
-      <h1 class="col-3">Liste de Favoris</h1>
+      <h1 class="col-3"><%= FAVORI_LIBELLE.TITLE %></h1>
     </div>
     <%- include('partials/suppress-modal') %>
     <% if(films.length> 0) { %>
